<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RadioGroup
        android:id="@+id/choose_state_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/not_started_task_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/not_started_task" />

        <RadioButton
            android:id="@+id/in_progress_task_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_progress_task" />

        <RadioButton
            android:id="@+id/finished_task_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finished_task" />
    </RadioGroup>

    <Button
        android:id="@+id/remove_task_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_task" />

    <Button
        android:id="@+id/finish_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done" />

</RadioGroup>