<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/create_group_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/create_group" />

    <Button
        android:id="@+id/join_group_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/join_group" />

    <Button
        android:id="@+id/my_groups_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/my_groups" />

</LinearLayout>