<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/group_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/group_name" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/LinearLayoutProgressJoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/join_button"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/join" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cancel" />

        </LinearLayout>
        
        <ProgressBar
            android:id="@+id/join_group_status"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

</LinearLayout>